# asset_ownership_proof

./: Cargo.toml  README.md
data/: merkle_data.json  signatures.json
src/: main.rs
