[package]
name = "ethereum-sig-verifier"
version = "0.1.0"
edition = "2021"
description = "Verify Ethereum signatures and inclusion in Merkle trees"

[dependencies]
sha3 = "0.10"        # For SHA3-256 hashing used in the Merkle tree
k256 = { version = "0.13.4", default-features = false, features = ["ecdsa", "serde", "alloc"] }
hex = "0.4"          # Hex encoding/decoding
rand_core = "0.6"
ecdsa-core = { version = "0.16.9", package = "ecdsa", features = ["verifying"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
